build/BuildTools/k8s-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.org/ssl-backends: "kubernetes-dashboard"
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/target: staging.vspengg.com
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: dashboard-ingress
  namespace: kube-system
spec:
  tls:
  - hosts:
    - dashboard.staging.vspengg.com
    secretName: kubernetes-dashboard-certs
  rules:
  - host: dashboard.staging.vspengg.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
